// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`stock-list tests renders correctly 1`] = `
<RCTScrollView
  ListHeaderComponent={[Function]}
  data={Array []}
  disableVirtualization={false}
  getItem={[Function]}
  getItemCount={[Function]}
  horizontal={false}
  initialNumToRender={10}
  keyExtractor={[Function]}
  maxToRenderPerBatch={10}
  numColumns={1}
  onContentSizeChange={[Function]}
  onEndReachedThreshold={2}
  onLayout={[Function]}
  onMomentumScrollEnd={[Function]}
  onScroll={[Function]}
  onScrollBeginDrag={[Function]}
  onScrollEndDrag={[Function]}
  refreshControl={
    <RefreshControlMock
      colors={
        Array [
          "#004D40",
        ]
      }
      onRefresh={[Function]}
      refreshing={false}
    />
  }
  renderItem={[Function]}
  scrollEventThrottle={50}
  stickyHeaderIndices={Array []}
  updateCellsBatchingPeriod={50}
  viewabilityConfigCallbackPairs={Array []}
  windowSize={21}
>
  <RCTRefreshControl />
  <View>
    <View
      onLayout={[Function]}
    >
      <View
        style={
          Object {
            "backgroundColor": "#e1e8ee",
            "borderBottomColor": "#e1e1e1",
            "borderBottomWidth": 1,
            "borderTopColor": "#e1e1e1",
            "borderTopWidth": 1,
            "padding": 8,
          }
        }
      >
        <View
          style={
            Object {
              "width": "100%",
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#bdc6cf",
                "borderBottomWidth": 0,
                "borderColor": "#86939e",
                "borderRadius": 15,
                "flexDirection": "row",
                "height": 30,
                "overflow": "hidden",
                "transform": Array [
                  Object {
                    "translateX": 0,
                  },
                ],
              }
            }
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "height": 40,
                  "justifyContent": "center",
                  "marginLeft": 8,
                }
              }
            >
              <View>
                <View
                  style={
                    Object {
                      "alignItems": "center",
                      "backgroundColor": "transparent",
                      "justifyContent": "center",
                    }
                  }
                  theme={
                    Object {
                      "colors": Object {
                        "divider": "#bcbbc1",
                        "error": "#ff190c",
                        "grey0": "#393e42",
                        "grey1": "#43484d",
                        "grey2": "#5e6977",
                        "grey3": "#86939e",
                        "grey4": "#bdc6cf",
                        "grey5": "#e1e8ee",
                        "greyOutline": "#bbb",
                        "primary": "#2089dc",
                        "searchBg": "#303337",
                        "secondary": "#8F0CE8",
                      },
                    }
                  }
                  underlayColor="white"
                >
                  <Text
                    allowFontScaling={false}
                    style={
                      Array [
                        Object {
                          "color": "#86939e",
                          "fontSize": 18,
                        },
                        Object {
                          "backgroundColor": "transparent",
                        },
                        Object {
                          "fontFamily": "Material Design Icons",
                          "fontStyle": "normal",
                          "fontWeight": "normal",
                        },
                        Object {},
                      ]
                    }
                    testID="iconIcon"
                  >
                    
                  </Text>
                </View>
              </View>
            </View>
            <TextInput
              allowFontScaling={true}
              autoCorrect={false}
              onBlur={[Function]}
              onChangeText={[Function]}
              onClear={[Function]}
              onFocus={[Function]}
              placeholder="ListStockPage.SearchBarPlaceholder"
              placeholderTextColor="#86939e"
              platform="default"
              style={
                Object {
                  "alignSelf": "center",
                  "color": "#86939e",
                  "flex": 1,
                  "fontSize": 18,
                  "height": 40,
                  "marginLeft": 10,
                }
              }
              testID="searchInput"
              underlineColorAndroid="transparent"
            />
            <View
              style={
                Object {
                  "alignItems": "center",
                  "height": 40,
                  "justifyContent": "center",
                  "marginLeft": 15,
                  "marginRight": 8,
                }
              }
            >
              <View
                style={
                  Object {
                    "flexDirection": "row",
                  }
                }
              />
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</RCTScrollView>
`;

exports[`stock-list tests renders correctly with error 1`] = `
<Text>
  Error! 
  Network connection failed
   
</Text>
`;

exports[`stock-list tests renders correctly with loading 1`] = `
<View
  style={
    Object {
      "height": 1334,
      "justifyContent": "center",
    }
  }
>
  <ActivityIndicator
    animating={true}
    color="#999999"
    hidesWhenStopped={true}
    size="large"
  />
</View>
`;

exports[`stock-list tests renders correctly with refreshing 1`] = `
<RCTScrollView
  ListHeaderComponent={[Function]}
  data={Array []}
  disableVirtualization={false}
  getItem={[Function]}
  getItemCount={[Function]}
  horizontal={false}
  initialNumToRender={10}
  keyExtractor={[Function]}
  maxToRenderPerBatch={10}
  numColumns={1}
  onContentSizeChange={[Function]}
  onEndReachedThreshold={2}
  onLayout={[Function]}
  onMomentumScrollEnd={[Function]}
  onScroll={[Function]}
  onScrollBeginDrag={[Function]}
  onScrollEndDrag={[Function]}
  refreshControl={
    <RefreshControlMock
      colors={
        Array [
          "#004D40",
        ]
      }
      onRefresh={[Function]}
      refreshing={true}
    />
  }
  renderItem={[Function]}
  scrollEventThrottle={50}
  stickyHeaderIndices={Array []}
  updateCellsBatchingPeriod={50}
  viewabilityConfigCallbackPairs={Array []}
  windowSize={21}
>
  <RCTRefreshControl />
  <View>
    <View
      onLayout={[Function]}
    >
      <View
        style={
          Object {
            "backgroundColor": "#e1e8ee",
            "borderBottomColor": "#e1e1e1",
            "borderBottomWidth": 1,
            "borderTopColor": "#e1e1e1",
            "borderTopWidth": 1,
            "padding": 8,
          }
        }
      >
        <View
          style={
            Object {
              "width": "100%",
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#bdc6cf",
                "borderBottomWidth": 0,
                "borderColor": "#86939e",
                "borderRadius": 15,
                "flexDirection": "row",
                "height": 30,
                "overflow": "hidden",
                "transform": Array [
                  Object {
                    "translateX": 0,
                  },
                ],
              }
            }
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "height": 40,
                  "justifyContent": "center",
                  "marginLeft": 8,
                }
              }
            >
              <View>
                <View
                  style={
                    Object {
                      "alignItems": "center",
                      "backgroundColor": "transparent",
                      "justifyContent": "center",
                    }
                  }
                  theme={
                    Object {
                      "colors": Object {
                        "divider": "#bcbbc1",
                        "error": "#ff190c",
                        "grey0": "#393e42",
                        "grey1": "#43484d",
                        "grey2": "#5e6977",
                        "grey3": "#86939e",
                        "grey4": "#bdc6cf",
                        "grey5": "#e1e8ee",
                        "greyOutline": "#bbb",
                        "primary": "#2089dc",
                        "searchBg": "#303337",
                        "secondary": "#8F0CE8",
                      },
                    }
                  }
                  underlayColor="white"
                >
                  <Text
                    allowFontScaling={false}
                    style={
                      Array [
                        Object {
                          "color": "#86939e",
                          "fontSize": 18,
                        },
                        Object {
                          "backgroundColor": "transparent",
                        },
                        Object {
                          "fontFamily": "Material Design Icons",
                          "fontStyle": "normal",
                          "fontWeight": "normal",
                        },
                        Object {},
                      ]
                    }
                    testID="iconIcon"
                  >
                    
                  </Text>
                </View>
              </View>
            </View>
            <TextInput
              allowFontScaling={true}
              autoCorrect={false}
              onBlur={[Function]}
              onChangeText={[Function]}
              onClear={[Function]}
              onFocus={[Function]}
              placeholder="ListStockPage.SearchBarPlaceholder"
              placeholderTextColor="#86939e"
              platform="default"
              style={
                Object {
                  "alignSelf": "center",
                  "color": "#86939e",
                  "flex": 1,
                  "fontSize": 18,
                  "height": 40,
                  "marginLeft": 10,
                }
              }
              testID="searchInput"
              underlineColorAndroid="transparent"
            />
            <View
              style={
                Object {
                  "alignItems": "center",
                  "height": 40,
                  "justifyContent": "center",
                  "marginLeft": 15,
                  "marginRight": 8,
                }
              }
            >
              <View
                style={
                  Object {
                    "flexDirection": "row",
                  }
                }
              />
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</RCTScrollView>
`;

exports[`stock-list tests renders correctly with stocks 1`] = `
<RCTScrollView
  ListHeaderComponent={[Function]}
  data={
    Array [
      Object {
        "close": 14.57,
        "high": 10.28,
        "low": 9.99,
        "name": "Apple",
        "revenue": -0.035,
        "stockInfo": Object {
          "historyLoading": false,
          "intraLoading": false,
          "metaLoading": false,
          "refreshing": false,
        },
        "symbol": "APL",
      },
      Object {
        "close": 14.57,
        "high": 10.28,
        "low": 9.99,
        "name": "Apple",
        "revenue": -0.035,
        "stockInfo": Object {
          "historyLoading": false,
          "intraLoading": false,
          "metaLoading": false,
          "refreshing": false,
        },
        "symbol": "APLL",
      },
    ]
  }
  disableVirtualization={false}
  getItem={[Function]}
  getItemCount={[Function]}
  horizontal={false}
  initialNumToRender={10}
  keyExtractor={[Function]}
  maxToRenderPerBatch={10}
  numColumns={1}
  onContentSizeChange={[Function]}
  onEndReachedThreshold={2}
  onLayout={[Function]}
  onMomentumScrollEnd={[Function]}
  onScroll={[Function]}
  onScrollBeginDrag={[Function]}
  onScrollEndDrag={[Function]}
  refreshControl={
    <RefreshControlMock
      colors={
        Array [
          "#004D40",
        ]
      }
      onRefresh={[Function]}
      refreshing={false}
    />
  }
  renderItem={[Function]}
  scrollEventThrottle={50}
  stickyHeaderIndices={Array []}
  updateCellsBatchingPeriod={50}
  viewabilityConfigCallbackPairs={Array []}
  windowSize={21}
>
  <RCTRefreshControl />
  <View>
    <View
      onLayout={[Function]}
    >
      <View
        style={
          Object {
            "backgroundColor": "#e1e8ee",
            "borderBottomColor": "#e1e1e1",
            "borderBottomWidth": 1,
            "borderTopColor": "#e1e1e1",
            "borderTopWidth": 1,
            "padding": 8,
          }
        }
      >
        <View
          style={
            Object {
              "width": "100%",
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#bdc6cf",
                "borderBottomWidth": 0,
                "borderColor": "#86939e",
                "borderRadius": 15,
                "flexDirection": "row",
                "height": 30,
                "overflow": "hidden",
                "transform": Array [
                  Object {
                    "translateX": 0,
                  },
                ],
              }
            }
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "height": 40,
                  "justifyContent": "center",
                  "marginLeft": 8,
                }
              }
            >
              <View>
                <View
                  style={
                    Object {
                      "alignItems": "center",
                      "backgroundColor": "transparent",
                      "justifyContent": "center",
                    }
                  }
                  theme={
                    Object {
                      "colors": Object {
                        "divider": "#bcbbc1",
                        "error": "#ff190c",
                        "grey0": "#393e42",
                        "grey1": "#43484d",
                        "grey2": "#5e6977",
                        "grey3": "#86939e",
                        "grey4": "#bdc6cf",
                        "grey5": "#e1e8ee",
                        "greyOutline": "#bbb",
                        "primary": "#2089dc",
                        "searchBg": "#303337",
                        "secondary": "#8F0CE8",
                      },
                    }
                  }
                  underlayColor="white"
                >
                  <Text
                    allowFontScaling={false}
                    style={
                      Array [
                        Object {
                          "color": "#86939e",
                          "fontSize": 18,
                        },
                        Object {
                          "backgroundColor": "transparent",
                        },
                        Object {
                          "fontFamily": "Material Design Icons",
                          "fontStyle": "normal",
                          "fontWeight": "normal",
                        },
                        Object {},
                      ]
                    }
                    testID="iconIcon"
                  >
                    
                  </Text>
                </View>
              </View>
            </View>
            <TextInput
              allowFontScaling={true}
              autoCorrect={false}
              onBlur={[Function]}
              onChangeText={[Function]}
              onClear={[Function]}
              onFocus={[Function]}
              placeholder="ListStockPage.SearchBarPlaceholder"
              placeholderTextColor="#86939e"
              platform="default"
              style={
                Object {
                  "alignSelf": "center",
                  "color": "#86939e",
                  "flex": 1,
                  "fontSize": 18,
                  "height": 40,
                  "marginLeft": 10,
                }
              }
              testID="searchInput"
              underlineColorAndroid="transparent"
            />
            <View
              style={
                Object {
                  "alignItems": "center",
                  "height": 40,
                  "justifyContent": "center",
                  "marginLeft": 15,
                  "marginRight": 8,
                }
              }
            >
              <View
                style={
                  Object {
                    "flexDirection": "row",
                  }
                }
              />
            </View>
          </View>
        </View>
      </View>
    </View>
    <View
      onLayout={[Function]}
      style={null}
    >
      <View
        accessible={true}
        isTVSelectable={true}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={null}
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "white",
              "borderBottomWidth": 0,
              "borderColor": "#bcbbc1",
              "flex": 1,
              "flexDirection": "row",
              "padding": 14,
              "paddingLeft": 32,
              "paddingVertical": 16,
            }
          }
        >
          <View
            style={
              Object {
                "flex": 1,
                "justifyContent": "center",
              }
            }
          >
            <Text
              style={
                Object {
                  "backgroundColor": "transparent",
                  "color": "#004D40",
                  "fontSize": 34,
                  "fontWeight": "bold",
                  "marginBottom": 16,
                }
              }
              testID="listItemTitle"
              theme={
                Object {
                  "colors": Object {
                    "divider": "#bcbbc1",
                    "error": "#ff190c",
                    "grey0": "#393e42",
                    "grey1": "#43484d",
                    "grey2": "#5e6977",
                    "grey3": "#86939e",
                    "grey4": "#bdc6cf",
                    "grey5": "#e1e8ee",
                    "greyOutline": "#bbb",
                    "primary": "#2089dc",
                    "searchBg": "#303337",
                    "secondary": "#8F0CE8",
                  },
                }
              }
            >
              Apple
            </Text>
            <View
              style={
                Object {
                  "flexDirection": "column",
                }
              }
            >
              <Text
                style={
                  Object {
                    "color": "#004D40",
                    "fontSize": 24,
                    "marginBottom": 0,
                    "textAlign": "justify",
                  }
                }
              >
                Last sale
              </Text>
              <Text
                style={
                  Object {
                    "color": "#004D40",
                    "fontSize": 28,
                    "fontWeight": "bold",
                    "marginTop": -4,
                    "textAlign": "justify",
                  }
                }
              >
                14.57 $
              </Text>
            </View>
          </View>
          <View
            width={16}
          />
          <View
            style={
              Object {
                "alignItems": "flex-end",
                "flex": 0.5,
                "justifyContent": "center",
              }
            }
          >
            <View
              style={
                Object {
                  "flexDirection": "column",
                  "marginLeft": 32,
                }
              }
            >
              <Text
                style={
                  Object {
                    "color": "#004D40",
                    "fontSize": 24,
                    "marginBottom": 0,
                    "textAlign": "justify",
                  }
                }
              >
                Revenue today
              </Text>
              <Text
                style={
                  Object {
                    "color": "#e20f00",
                    "fontSize": 36,
                    "fontWeight": "bold",
                    "textAlign": "center",
                  }
                }
              >
                -3.50 %
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
    <View
      onLayout={[Function]}
      style={null}
    >
      <View
        accessible={true}
        isTVSelectable={true}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={null}
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#F0F0F0",
              "borderBottomWidth": 0,
              "borderColor": "#bcbbc1",
              "flex": 1,
              "flexDirection": "row",
              "padding": 14,
              "paddingLeft": 32,
              "paddingVertical": 16,
            }
          }
        >
          <View
            style={
              Object {
                "flex": 1,
                "justifyContent": "center",
              }
            }
          >
            <Text
              style={
                Object {
                  "backgroundColor": "transparent",
                  "color": "#004D40",
                  "fontSize": 34,
                  "fontWeight": "bold",
                  "marginBottom": 16,
                }
              }
              testID="listItemTitle"
              theme={
                Object {
                  "colors": Object {
                    "divider": "#bcbbc1",
                    "error": "#ff190c",
                    "grey0": "#393e42",
                    "grey1": "#43484d",
                    "grey2": "#5e6977",
                    "grey3": "#86939e",
                    "grey4": "#bdc6cf",
                    "grey5": "#e1e8ee",
                    "greyOutline": "#bbb",
                    "primary": "#2089dc",
                    "searchBg": "#303337",
                    "secondary": "#8F0CE8",
                  },
                }
              }
            >
              Apple
            </Text>
            <View
              style={
                Object {
                  "flexDirection": "column",
                }
              }
            >
              <Text
                style={
                  Object {
                    "color": "#004D40",
                    "fontSize": 24,
                    "marginBottom": 0,
                    "textAlign": "justify",
                  }
                }
              >
                Last sale
              </Text>
              <Text
                style={
                  Object {
                    "color": "#004D40",
                    "fontSize": 28,
                    "fontWeight": "bold",
                    "marginTop": -4,
                    "textAlign": "justify",
                  }
                }
              >
                14.57 $
              </Text>
            </View>
          </View>
          <View
            width={16}
          />
          <View
            style={
              Object {
                "alignItems": "flex-end",
                "flex": 0.5,
                "justifyContent": "center",
              }
            }
          >
            <View
              style={
                Object {
                  "flexDirection": "column",
                  "marginLeft": 32,
                }
              }
            >
              <Text
                style={
                  Object {
                    "color": "#004D40",
                    "fontSize": 24,
                    "marginBottom": 0,
                    "textAlign": "justify",
                  }
                }
              >
                Revenue today
              </Text>
              <Text
                style={
                  Object {
                    "color": "#e20f00",
                    "fontSize": 36,
                    "fontWeight": "bold",
                    "textAlign": "center",
                  }
                }
              >
                -3.50 %
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</RCTScrollView>
`;
